[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/layers/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/GameOver_Won.gd" type="Script" id=2]
[ext_resource path="res://samagri/theme/user_interface.tres" type="Theme" id=3]
[ext_resource path="res://samagri/Player_MainMenu.png" type="Texture" id=4]
[ext_resource path="res://samagri/coin.png" type="Texture" id=5]
[ext_resource path="res://samagri/star.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1600, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1920, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2240, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2560, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2880, 0, 320, 320 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3200, 0, 320, 320 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "New Anim",
"speed": 10.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 412, 300 )
offset = Vector2( 100, 0 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 458.0
margin_top = 381.0
margin_right = 674.0
margin_bottom = 436.0
text = "Re-Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 710.0
margin_top = 421.0
margin_right = 926.0
margin_bottom = 476.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 478.0
margin_top = 491.0
margin_right = 926.0
margin_bottom = 546.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/Control"]
position = Vector2( 243, 313 )
frames = SubResource( 12 )
animation = "New Anim"
frame = 2
playing = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 138.0
margin_top = 140.0
margin_right = 338.0
margin_bottom = 189.0
color = Color( 0.262745, 0.290196, 0.372549, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect"]
anchor_left = -1.287
anchor_top = -4.437
anchor_right = -1.287
anchor_bottom = -4.437
margin_left = 245.4
margin_top = 208.413
margin_right = 380.4
margin_bottom = 246.413
rect_scale = Vector2( 1.72402, 1.67047 )
text = "Runner"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 549.0
margin_top = 160.0
margin_right = 847.0
margin_bottom = 210.0
color = Color( 0.619608, 0.298039, 0.2, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/ColorRect4"]
margin_left = 7.0
margin_top = -10.0
margin_right = 174.0
margin_bottom = 28.0
rect_scale = Vector2( 1.72402, 1.67047 )
text = "Game OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 628.0
margin_top = 240.0
margin_right = 788.0
margin_bottom = 280.0
color = Color( 0.152941, 0.172549, 0.188235, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/Control/ColorRect2"]
margin_left = 39.0
margin_top = 0.999969
margin_right = 67.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Control/ColorRect2"]
position = Vector2( 19, 20 )
texture = ExtResource( 6 )

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 628.0
margin_top = 302.0
margin_right = 788.0
margin_bottom = 342.0
color = Color( 0.152941, 0.172549, 0.188235, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="CanvasLayer/Control/ColorRect3"]
margin_left = 39.0
margin_top = 0.999969
margin_right = 96.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/Control/ColorRect3"]
position = Vector2( 19, 20 )
texture = ExtResource( 5 )

[connection signal="pressed" from="CanvasLayer/Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
